fixed overflowing search box in search full page

--- a/css/ztrix.no-query.css
+++ b/css/ztrix.no-query.css
@@ -336,6 +336,7 @@ div.responsive-toggled {
 .search-block-form input[type="text"], .search-form input[type="text"] {
   border: 1px solid #0B3386;
   padding: 0.25em 2.25em 0.25em 0.5em;
+  max-width: 90%;
 }
 
 .l-region--sidebar-first li, .l-region--sidebar-second li {
