--- a/sass/components/_search.scss
+++ b/sass/components/_search.scss
@@ -8,5 +8,6 @@
     //padding-left: 0.5em;
     //padding-right: 2.25em;
     padding: 0.25em 2.25em 0.25em 0.5em;
+    max-width: 90%;
   }
 }
